--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -36,13 +36,13 @@
   .sponsors-grid {
     margin-top: 2rem;
     display: grid;
-    grid-template-columns: auto auto;
-    gap: 4rem;
+    grid-template-columns: repeat(3, minmax(auto, 600px));
+    gap: 2rem;
     width: 100%;
 
     img {
       width: 100%;
-      max-width: 400px;
+      max-width: 200px;
       display: block;
     }
   }
